Add functionality to Home and Menu buttons using modules, Style almost every aspect of the page

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,86 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Coral & Co.</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <button class="home-btn">Home</button>
+        <button class="menu-btn">Menu</button>
+        <button class="about-btn">About</button>
+      </nav>
+    </header>
+    <div id="content">
+      <h1 class="heading">Welcome to Coral & Co.</h1>
+      <div>
+        <p class="hero">“Where every dish tells a story from the ocean”</p>
+      </div>
+
+      <!-- <div class="container">
+        <div class="menu-container">
+          <div class="menu-header">
+            <hr />
+            <h1>Coral & Co.</h1>
+            <hr />
+          </div>
+          <div class="menu-item">
+            <p>
+              <span>Seaside Oysters</span> <br />
+              Fresh oysters served with citrus zest.
+            </p>
+          </div>
+          <div class="menu-item">
+            <p>
+              <span>Coral Reef Soup</span> <br />
+              Creamy seafood broth with coastal herbs.
+            </p>
+          </div>
+          <div class="menu-item">
+            <p>
+              <span>Golden Tide Shrimp</span> <br />
+              Grilled shrimp glazed in honey-chili.
+            </p>
+          </div>
+          <div class="menu-item">
+            <p>
+              <span>Sailor’s Catch</span> <br />
+              Daily fish seared with lemon butter.
+            </p>
+          </div>
+          <div class="menu-item">
+            <p>
+              <span>Pearl Pasta</span> <br />
+              Pasta tossed with clams and garlic.
+            </p>
+          </div>
+          <div class="menu-item">
+            <p>
+              <span>Ocean Mist Salad</span> <br />
+              Crisp greens topped with smoked salmon.
+            </p>
+          </div>
+        </div>
+        <div class="photo-container">
+          <img
+            src="https://images.unsplash.com/photo-1729269490299-a9d4a82e4786?q=80&w=2340&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt=""
+          />
+          <img
+            src="https://images.unsplash.com/photo-1448043552756-e747b7a2b2b8?q=80&w=1952&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt=""
+          />
+        </div>
+      </div> -->
+    </div>
+    <footer>
+      <p>@Odin 2025</p>
+    </footer>
+  </body>
 </html>
